--- a/install
+++ b/install
@@ -11,5 +11,7 @@ BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 cd "${BASEDIR}"
 #git -C "${DOTBOT_DIR}" submodule sync --quiet --recursive
 #git submodule update --init --recursive "${DOTBOT_DIR}"
-
+uv venv  --python 3.12
+source .venv/bin/activate
+uv pip install                                                   ruamel-yaml
 "${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
