--- a/install
+++ b/install
@@ -9,8 +9,8 @@ DOTBOT_BIN="bin/dotbot"
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
 cd "${BASEDIR}"
-#git -C "${DOTBOT_DIR}" submodule sync --quiet --recursive
-#git submodule update --init --recursive "${DOTBOT_DIR}"
+git -C "${DOTBOT_DIR}" submodule sync --quiet --recursive
+git submodule update --init --recursive "${DOTBOT_DIR}"
 if ! command -v uv &> /dev/null; then
     echo "uv 未安装，开始安装..."
     curl -LsSf https://astral.sh/uv/install.sh | sh
