--- a/install
+++ b/install
@@ -115,6 +115,8 @@ main() {
     # 安装uv（Python包管理器）
     if ! check_command uv; then
         echo_info "uv未安装，正在安装..."
+        UV_INSTALL_URL=$(get_uv_install_mirror_url)
+        if curl -LsSf "$UV_INSTALL_URL" | sh; then
         # 使用镜像源或直接源，根据网络情况
         UV_INSTALL_URL="https://astral.sh/uv/install.sh"
         if check_need_mirror; then
@@ -124,17 +126,25 @@ main() {
         
         if curl -LsSf $UV_INSTALL_URL | sh; then
             echo_success "uv安装成功"
-            # 添加uv到PATH（通常安装在~/.cargo/bin）
+            # 添加uv到PATH
             export PATH="$HOME/.cargo/bin:$PATH"
-            # 重新检查uv命令
+            # 检查uv是否可用
             if ! check_command uv; then
                 echo_warning "uv安装成功但未找到命令，尝试使用完整路径"
-                UV_PATH="$HOME/.cargo/bin/uv"
-                if [ -f "$UV_PATH" ]; then
-                    alias uv="$UV_PATH"
+                if [ -f "$HOME/.cargo/bin/uv" ]; then
+                    alias uv="$HOME/.cargo/bin/uv"
+                    echo_success "已创建uv别名"
                 else
                     echo_error "无法找到uv可执行文件，请检查安装路径"
-                    exit 1
+                    # 尝试查找uv可执行文件
+                    UV_PATH=$(find "$HOME" -name "uv" -type f -executable 2>/dev/null | head -n 1)
+                    if [ -n "$UV_PATH" ]; then
+                        echo_info "找到uv可执行文件: $UV_PATH"
+                        alias uv="$UV_PATH"
+                        echo_success "已创建uv别名"
+                    else
+                        exit 1
+                    fi
                 fi
             fi
         else
