feat(install): 引入基于 uv 的现代化安装脚本
引入了一个新的、更健壮的 `install` 脚本，并将其整合到新的项目结构中。

主要改进：
- **使用 uv**: 新脚本通过 uv 创建独立的 Python 虚拟环境来运行 dotbot，避免了对系统 Python 环境的依赖和可能出现的版本冲突。
- **脚本整合**: 将新的 install 脚本迁移至 scripts/ 目录，并修正了其内部的路径依赖，以适应新的项目结构。
- **文档更新**: README.md 中的安装命令已同步更新，指向新的脚本位置。

这个改动大大提升了 dotfiles 的安装可靠性和环境隔离性。

--- a/scripts/install
+++ b/scripts/install
@@ -87,8 +87,8 @@ install_zsh() {
 main() {
     echo_info "开始安装dotfiles..."
     
-    # 切换到基础目录
-    cd "${BASEDIR}"
+    # 切换到项目根目录
+    cd "${BASEDIR}/.."
     
     # 检查zsh是否安装
     if ! check_command zsh; then
@@ -220,7 +220,7 @@ main() {
     
     # 运行dotbot
     echo_info "运行dotbot安装脚本..."
-    "${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
+    "./${DOTBOT_DIR}/${DOTBOT_BIN}" -d "./" -c "${CONFIG}" "${@}"
     
     echo_success "dotfiles安装完成！"
 }
